--- a/Desenvolvimento WEB/RegraDeNegocio/RegraDeNegocio.csproj
+++ b/Desenvolvimento WEB/RegraDeNegocio/RegraDeNegocio.csproj
@@ -50,6 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContaNegocio.cs" />
+    <Compile Include="DBCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
