--- a/Desenvolvimento WEB/WebAPI/WebAPI.csproj
+++ b/Desenvolvimento WEB/WebAPI/WebAPI.csproj
@@ -213,6 +213,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\adsnoobs - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\adsnoobs - Web Deploy.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BancoDeDados\BancoDeDados.csproj">
