--- a/Desenvolvimento WEB/RegraDeNegocio/RegraDeNegocio.csproj
+++ b/Desenvolvimento WEB/RegraDeNegocio/RegraDeNegocio.csproj
@@ -50,9 +50,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoriaNegocio.cs" />
     <Compile Include="ContaNegocio.cs" />
     <Compile Include="DBCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TipoMovimentoNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
