--- a/Desenvolvimento WEB/WebAPI/WebAPI.csproj
+++ b/Desenvolvimento WEB/WebAPI/WebAPI.csproj
@@ -158,8 +158,10 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\CategoriaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ContaController.cs" />
+    <Compile Include="Controllers\TipoMovimentoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
