--- a/Desenvolvimento WEB/BancoDeDados/BancoDeDados.csproj
+++ b/Desenvolvimento WEB/BancoDeDados/BancoDeDados.csproj
@@ -51,7 +51,7 @@
     <Compile Include="DB\Categoria.cs" />
     <Compile Include="DB\Conta.cs" />
     <Compile Include="DB\Extrato.cs" />
-    <Compile Include="DB\ExtratoCategoria.cs" />
+    <Compile Include="View\ExtratoCategoriaView.cs" />
     <Compile Include="DB\Movimento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DB\TipoMovimento.cs" />
@@ -59,6 +59,7 @@
     <Compile Include="View\CategoriaView.cs" />
     <Compile Include="View\ContaView.cs" />
     <Compile Include="View\MovimentoView.cs" />
+    <Compile Include="View\DashBoardResumoView.cs" />
     <Compile Include="View\TipoMovimentoView.cs" />
   </ItemGroup>
   <ItemGroup>
