--- a/Desenvolvimento WEB/WebAPI/Web.config
+++ b/Desenvolvimento WEB/WebAPI/Web.config
@@ -11,7 +11,7 @@
 
   <connectionStrings>
     <!-- SQL SERVER -->
-    <add name="BDContext" providerName="System.Data.SqlClient" connectionString="Server=microsalessql.database.windows.net;Database=adsnoobs;persist security info=True;user id=microsales;password=ms*17*WEB;MultipleActiveResultSets=True;"/>
+    <add name="BDContext" providerName="System.Data.SqlClient" connectionString="Server=microsalessql.database.windows.net;Database=adsnoobs;persist security info=True;user id=microsales;password=ms*17*WEB;MultipleActiveResultSets=True;" />
   </connectionStrings>
 
   <appSettings>
@@ -64,6 +64,14 @@
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
