Ajuste string de conexão

--- a/Desenvolvimento WEB/WebAPI/Web.config
+++ b/Desenvolvimento WEB/WebAPI/Web.config
@@ -11,7 +11,7 @@
 
   <connectionStrings>
     <!-- SQL SERVER -->
-    <add name="BDContext" providerName="System.Data.SqlClient" connectionString="Server=microsalessql.database.windows.net;Database=adsnoobs;persist security info=True;user id=microsales;password=ms*17*WEB;MultipleActiveResultSets=True;" />
+    <add name="BDContext" providerName="System.Data.SqlClient" connectionString="Server=microsalessql.database.windows.net;Database=adsnoobs;persist security info=True;user id=microsales;password=ADSnoobs2018;MultipleActiveResultSets=True;" />
   </connectionStrings>
 
   <appSettings>
